# chriscummins.github.io

./: .gitignore  404.html  404.html.in  404.md  CNAME  COPYING  Gemfile  LICENSE  Makefile  README.md  _config.yml  autogen.sh  boids.html  browserconfig.xml  configure.ac  cv.json  cv.md  disassembler.html  empty.html.in  gen-regions.html.in  genetics.html  genetics.html.in  index.html  index.html.in  index.md  index.php.in  license.html.in  manifest.json  portfolio.html  privacy.html.in  projects.md  redesign.html  resume.html  robots.txt  sitemap.xml  style.html.in  webcam.php.in
Documentation/: .gitignore  jsdocrc.json
_data/: art.json  cv.json  portfolio.json
_drafts/: from-ipad.md  site-revamp.md
_includes/: around-the-web.html  banner.html  code.firstline.fix.js  favicons.html  google-analytics.html  hypher.js  links.js  opengraph.html  posts.html  scale.fix.js  typeset.js
_layouts/: app.html  compress.html  default.html
_posts/: 2013-05-03-quines.md  2013-05-06-egosurfing-with-git.md  2013-05-07-untangling-the-preprocessor.md  2013-05-10-im-a-vim-user.md  2013-08-07-building-a-portable-path.md  2013-12-23-cs-revisited.md  2013-12-27-typesetting.md  2013-12-30-about.md  2014-01-10-ashleigh.md  2014-01-20-scratching-an-itch.md  2014-01-28-visualising-code-behaviour.md  2014-02-10-migrating-php-to-clojure.md  2014-03-17-jabs.md  2014-05-03-crap-code-quickly.md  2014-05-04-crap-posts-quickly.md  2014-05-10-usability-testing.md  2014-08-15-quick-hdd-health-check.md  2014-08-27-emu-by-example.md  2014-09-03-emu-by-example-1.md  2014-09-04-emu-by-example-2.md  2014-09-05-emu-by-example-3.md  2014-09-11-emu-by-example-4.md  2014-09-18-arch-in-20-mins.md  2014-09-30-pip-db.md  2014-11-18-srtime.md  2014-11-21-starting-phd.md  2014-11-23-5-things-to-read.md  2014-12-14-130k-say-hi.md  2015-05-29-dynamic-autotuning-algorithmic-skeletons.md  2015-10-20-msc.md  2015-12-03-omnitune.md  2016-08-13-make-verbosity.md  2016-11-28-incremental-travis-builds.md  2017-02-21-cgo17.md  2017-04-13-20pc-1-bazel.md  2017-04-19-20pc-2-lmk.md  2017-05-18-20pc-3-freefocus.md  2017-06-08-site-revamp.md  2017-06-10-deep-learning-poster.md  2017-06-10-web-1.0.md  (+7 more)
_sass/: around-the-web.scss  banner.scss  bootstrap-variables.scss  jumbotron.scss
about/: index.html
art/: index.html
assets/: ga.php.in
assets/css/: .gitignore  buttons.css.in  flat-ui.css.in  gen-regions.css.in  genetics.css.in  jquery.fancybox-buttons.css.in  music.css.in  pictures.css.in  site.css.in  software.css.in  static-700.css.in  styles.css.in
assets/js/: .gitignore  boids.js.in  bootstrap-extras.js.in  fancybox-extras.js.in  flatui.js.in  gen-regions.js.in  genetics.js.in  impress.js.in  index.js.in  jquery.fancybox-buttons.js.in  jquery.fancybox-media.js.in  jquery.fancybox-thumbs.js.in  julius.js.in  lonely-cosmonaut.js.in  music.js.in  site-components.js.in  site.js.in
boids/: index.html.in
cgo17/: index.md
cgo22-compilergym-tutorial/: index.md
code/: index.md
contact/: index.html
crypto/: .gitignore  julius.html.in
css/: app.css  pygment_trac.css  styles.css  styles.less  styles.scss
cv/: index.html  index.md
deepsmith/: index.md
disassembler/: index.html
drafts/: 599.html
faq/: index.html
feeds/: all.atom.xml  photographs.atom.xml
fonts/: LICENSE  cmun-bright.css  cmun-typewriter.css
gen-regions/: index.html  index.html.in
genetics/: .gitignore  index.html.in  webcam.php.in
gol/: index.html.in
img/banners/: README.txt
img/social/: README.md
issta18/: index.md
js/: app-components.js  boids.js  disassembler.js  ee4dsa-asm.js  ee4dsa-disassembler.js  ee4dsa-util.js  gen-regions.js  genetics.js  jquery.hypher.js  site.js  site.min.js  typeset.js  typeset.min.js
local/: ga.html
local/img/: screenshot-facebook.psd  screenshot-linked.psd  screenshot-soundcloud.psd  sunflowers.psd  tom-waits.psd
lonely-cosmonaut/: index.html.in
ml4pl/: index.md
music/: index.html.in
myrmidon/: index.html
old-site/: Makefile.am  README.md
old-site/tools/: .gitignore
old-site/www/: Makefile.am  index.php  julius.php  music.php  pictures.php  site.php  software.php  style.php
old-site/www/css/: jquery.fancybox.css
old-site/www/html/: 404.html  _footer.html  _title.html  gen-regions.html  julius.html  music.html
old-site/www/js/: music.js  site.js
old-site/www/lib/: Makefile.am  config.php.in  debug.php  error.php  files.php  ga.php  get.php  post.php  template.php
old-site/www/lib/Twig/: Makefile.am
pact17/: index.md
phd/: index.html
photographs/: index.html
photographs/1/: index.html
photographs/123/: index.html
photographs/142/: index.html
photographs/152/: index.html
photographs/156/: index.html
photographs/158/: index.html
photographs/164/: index.html
photographs/173/: index.html
photographs/179/: index.html
photographs/212/: index.html
photographs/213/: index.html
photographs/219/: index.html
photographs/225/: index.html
pictures/: index.html.in
portfolio/: index.html  index.md
programl/: index.md
projects/: index.md
rsvp/: index.md
s/boids/: index.html
scripts/: build-me.sh  json2txt.py  unused_banners.sh
shop/: index.html
software/: index.html.in  index.md
tools/: mkfancybox.sh
www/: .gitignore  .htaccess.in  404.html  404.php  Makefile  Makefile.am  boids.php  empty.html  empty.php  gen-regions.php  genetics.php  gol.php  index.php  julius.php  message.php  music.php  pictures.php  site.html  site.php  software.php  style.html  style.php
www/assets/: .gitignore
www/assets/js/: gol.js  webcam.js
www/crypto/: julius.html
www/css/: Makefile.am  jquery.fancybox.css  styles.css
www/fonts/: Makefile.am
www/genetics/: .gitignore
www/html/: Makefile.am  _navbar.html  _page.html  boids.html  genetics.html  gol.html  index.html  photographs.html  software.html
www/img/: Makefile.am
www/js/: Makefile.am  gen-regions.js  genetics.js  index.js
www/lib/: Makefile.am  config.php.in  ga.php  goto.php  history.php  init.php  server.php  superglobals.php  template.php  webcam.php
www/software/: index.html
(+138 files in other folders)
